Change plain text to something useful

--- a/src/main/resources/static/View/login.html
+++ b/src/main/resources/static/View/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ticketsystem</title>
+    <title>Fehlerverwaltungssystem</title>
     <style type="text/css">
         body{
             width: 1200px;
@@ -13,9 +13,9 @@
 </head>
 <body>
 <div class="col-sm-8 col-sm-push-4">
-    <h2>Ticketsystem</h2>
-    <p>Bitte melden Sie sich mit Ihrem Benutzernamen und Ihrem Passwort für an!</p>
-    <p>Für weitere Informationen kontaktieen Sie ihren Presidente JP</p>
+    <h2>Fehlerverwaltungssystem</h2>
+    <p>Bitte melden Sie sich mit Ihrem Benutzernamen und Ihrem Passwort an.</p>
+    <p>Für weitere Informationen kontaktieren Sie bitte Ihren Systemadministrator.</p>
     <p class="text-danger">Zugang nur für autorisierte Entwickler.</p>
 </div>
 <div class="col-sm-4 col-sm-pull-8">
