--- a/src/main/resources/static/View/home.html
+++ b/src/main/resources/static/View/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Issue Overview</title>
+    <title>Felerübersicht</title>
 
     <style type="text/css">
 
