Implement get request for excludeClosed Defects

--- a/src/main/resources/static/View/login.html
+++ b/src/main/resources/static/View/login.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <title>Fehlerverwaltungssystem</title>
     <style type="text/css">
-        body{
-            width: 1200px;
-            margin: 0 auto;
+        .page-content{
+            padding: 100px;
             background-color: #b3d7ff;
         }
     </style>
