--- a/src/main/resources/static/View/ticket.html
+++ b/src/main/resources/static/View/ticket.html
@@ -22,13 +22,14 @@
         <label>Titel</label>
         <input type="text"
                class="form-control title"
-               aria-describedby="Titel des Defects">
+               aria-describedby="Titel des Defects"
+               ng-model="defect.title">
     </div>
     <div class="form-group">
         <label>Beschreibung des Defects</label>
-        <textarea class="form-control description" rows="8"></textarea>
+        <textarea class="form-control description" rows="8" ng-model="defect.description"></textarea>
     </div>
-    <button type="submit" class="btn btn-success">Ticket erstellen</button>
+    <button type="submit" class="btn btn-success" ng-click="createDefect()">Ticket erstellen</button>
 </form>
 </body>
 </html>
