--- a/src/main/resources/static/View/defect.html
+++ b/src/main/resources/static/View/defect.html
@@ -17,19 +17,23 @@
     </style>
 </head>
 <body>
-<form>
-    <div class="form-group">
-        <label>Titel</label>
-        <input type="text"
-               class="form-control title"
-               aria-describedby="Titel des Defects"
-               ng-model="defect.title">
-    </div>
-    <div class="form-group">
-        <label>Beschreibung des Defects</label>
-        <textarea class="form-control description" rows="8" ng-model="defect.description"></textarea>
-    </div>
-    <button type="submit" class="btn btn-success" ng-click="createDefect()">Ticket erstellen</button>
-</form>
+    <form>
+        <div class="form-group">
+            <label>Titel</label>
+            <input type="text"
+                   class="form-control title"
+                   aria-describedby="Titel des Defects"
+                   ng-model="defect.title">
+        </div>
+        <div class="form-group">
+            <label>Beschreibung des Defects</label>
+            <textarea class="form-control description" rows="8" ng-model="defect.description"></textarea>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-success" ng-click="createDefect()">Ticket erstellen</button>
+            <button class="btn btn-primary" ng-click="switchToHome()">Zurück zur vorherigen Seite</button>
+        </div>
+
+    </form>
 </body>
 </html>
