--- a/src/main/resources/static/View/defectdetails.html
+++ b/src/main/resources/static/View/defectdetails.html
@@ -5,6 +5,41 @@
     <title>DefectDetail</title>
 </head>
 <body>
+<section id="contact">
+    <div class="section-content">
+        <h1 class="section-header">Get in <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Touch with us</span></h1>
+        <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h3>
+    </div>
+    <div class="contact-section">
+        <div class="container">
+            <form>
+                <div class="col-md-6 form-line">
+                    <div class="form-group">
+                        <label for="title">Title</label>
+                        <textarea type="text" class="form-control" id="title" ng-model="$scope.defect.title"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="defectDescription">Beschreibung</label>
+                        <textarea type="text" class="form-control" id="defectDescription"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="defectStatus">Mobile No.</label>
+                        <input type="" class="form-control" id="defectStatus" placeholder=" Enter 10-digit mobile no.">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for ="comment">Kommentar</label>
+                        <textarea  class="form-control" id="comment" placeholder="Kommentar eingeben"></textarea>
+                    </div>
+                    <div>
 
+                        <button type="button" class="btn btn-default submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+</section>
 </body>
 </html>
