Add edit button to datatable

--- a/src/main/resources/static/View/home.html
+++ b/src/main/resources/static/View/home.html
@@ -52,6 +52,7 @@
             <td>{{ defect.creationDate }}</td>
             <td>{{ defect.creator.username }}</td>
             <td>{{ defect.status }}</td>
+            <td><button class="btn-success" ng-click="switchToDetails(defect)">Bearbeiten</button> </td>
         </tr>
         </tbody>
     </table>
