--- a/src/main/resources/static/View/defectdetails.html
+++ b/src/main/resources/static/View/defectdetails.html
@@ -6,29 +6,32 @@
 </head>
 <body>
 <section id="contact">
-    <div class="section-content">
-        <h1 class="section-header">Get in <span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s"> Touch with us</span></h1>
-        <h3>Lorem Ipsum is simply dummy text of the printing and typesetting industry</h3>
-    </div>
-    <div class="contact-section">
         <div class="container">
             <form>
-                <div class="col-md-6 form-line">
+                <div class="col-sm-12 row">
                     <div class="form-group">
                         <label for="title">Title</label>
-                        <textarea type="text" class="form-control" id="title" ng-model="$scope.defect.title"></textarea>
+                        <textarea type="text" class="form-control" id="title" ng-model="$scope.defect.title" contenteditable="false"></textarea>
                     </div>
                     <div class="form-group">
-                        <label for="defectDescription">Beschreibung</label>
-                        <textarea type="text" class="form-control" id="defectDescription"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="defectStatus">Mobile No.</label>
-                        <input type="" class="form-control" id="defectStatus" placeholder=" Enter 10-digit mobile no.">
+                        <label for="">Status</label>
+                        <textarea type="text" class="form-control" id="" ng-model="$scope.defect.user.username" contenteditable="false"></textarea>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-sm-12 row">
                     <div class="form-group">
+                        <label for="defectCreator">Erstellt von:</label>
+                        <textarea type="text" class="form-control" id="defectCreator" ng-model="$scope.defect.user.username" contenteditable="false"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="defectCreationDate">Datum der Erstellung:</label>
+                        <textarea type="date" class="form-control" id="defectCreationDate" ng-model="$scope.defect.date" contenteditable="false"></textarea>
+                    </div>
+                </div>
+                <div class="col-sm-12 row">
+                    <div class="form-group">
+                        <label for="">Ticket Status</label>
+
                         <label for ="comment">Kommentar</label>
                         <textarea  class="form-control" id="comment" placeholder="Kommentar eingeben"></textarea>
                     </div>
@@ -40,6 +43,7 @@
                 </div>
             </form>
         </div>
+    </div>
 </section>
 </body>
 </html>
