Edit form of defectdetails view

--- a/src/main/resources/static/View/defect.html
+++ b/src/main/resources/static/View/defect.html
@@ -19,7 +19,7 @@
 <body>
     <form ng-submit="createDefect()">
         <div class="form-group">
-            <label>Titel</label>
+            <label>Betreff</label>
             <input type="text"
                    class="form-control title"
                    aria-describedby="Titel des Defects"
