--- a/src/main/resources/static/View/home.html
+++ b/src/main/resources/static/View/home.html
@@ -42,6 +42,7 @@
             <th>Erstellungsdatum</th>
             <th>Autor</th>
             <th>Status</th>
+            <th>Aktion</th>
         </tr>
         </thead>
         <tbody>
@@ -52,7 +53,7 @@
             <td>{{ defect.creationDate }}</td>
             <td>{{ defect.creator.username }}</td>
             <td>{{ defect.status }}</td>
-            <td><button class="btn-success" ng-click="switchToDetails(defect)">Bearbeiten</button> </td>
+            <td><button class="btn btn-success" ng-click="switchToDetails(defect)">Bearbeiten</button> </td>
         </tr>
         </tbody>
     </table>
