--- a/src/main/resources/static/View/defectdetails.html
+++ b/src/main/resources/static/View/defectdetails.html
@@ -3,47 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <title>DefectDetail</title>
+    <style type="text/css">
+        .page-content {
+            padding: 40px;
+        }
+    </style>
 </head>
 <body>
-<section id="contact">
-        <div class="container">
-            <form>
-                <div class="col-sm-12 row">
-                    <div class="form-group">
-                        <label for="title">Title</label>
-                        <textarea type="text" class="form-control" id="title" ng-model="$scope.defect.title" contenteditable="false"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="">Status</label>
-                        <textarea type="text" class="form-control" id="" ng-model="$scope.defect.user.username" contenteditable="false"></textarea>
-                    </div>
-                </div>
-                <div class="col-sm-12 row">
-                    <div class="form-group">
-                        <label for="defectCreator">Erstellt von:</label>
-                        <textarea type="text" class="form-control" id="defectCreator" ng-model="$scope.defect.user.username" contenteditable="false"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="defectCreationDate">Datum der Erstellung:</label>
-                        <textarea type="date" class="form-control" id="defectCreationDate" ng-model="$scope.defect.date" contenteditable="false"></textarea>
-                    </div>
-                </div>
-                <div class="col-sm-12 row">
-                    <div class="form-group">
-                        <label for="">Ticket Status</label>
-
-                        <label for ="comment">Kommentar</label>
-                        <textarea  class="form-control" id="comment" placeholder="Kommentar eingeben"></textarea>
-                    </div>
-                    <div>
-
-                        <button type="button" class="btn btn-default submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>  Send Message</button>
-                    </div>
-
-                </div>
-            </form>
+    <form ng-submit="submitChanges()">
+        <div class="form-group">
+            <label>Id</label>
+            <input type="number" class="form-control" ng-model="defect.id" ng-disabled="true">
         </div>
-    </div>
-</section>
+        <div class="form-group">
+            <label>Betreff</label>
+            <input type="text" class="form-control" ng-model="defect.title" ng-disabled="true">
+        </div>
+        <div class="form-group">
+            <label>Ersteller</label>
+            <input type="text" class="form-control" ng-model="defect.creator.username" ng-disabled="true">
+        </div>
+        <div class="form-group">
+            <label>Erstellt</label>
+            <input type="text" class="form-control" ng-model="defect.creationDate" ng-disabled="true">
+        </div>
+        <div class="form-group">
+            <label>Beschreibung</label>
+            <textarea type="text" class="form-control" ng-model="defect.description" ng ng-disabled="true"></textarea>
+        </div>
+        <div class="form-group">
+            <label>Status</label>
+            <textarea type="text" class="form-control" ng-model="defect.status" ng ng-disabled="true"></textarea>
+        </div>
+        <hr>
+        <div class="form-group">
+            <div class="dropdown">
+                <select name="dropdownStatus" id="dropdownStatus" ng-model="selectedStatus">
+                    <option ng-repeat="status in defectstatus" value="{{status}}">{{status}}</option>
+                </select>
+            </div>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-success">Ticket erstellen</button>
+            <button class="btn btn-primary" ng-click="switchToHome()">Zurück zur vorherigen Seite</button>
+        </div>
+    </form>
 </body>
 </html>
