--- a/src/main/resources/static/View/registration.html
+++ b/src/main/resources/static/View/registration.html
@@ -14,16 +14,20 @@
     <div class="col-sm-4 col-sm-pull-8">
         <form>
             <div class="form-group">
-                <label for="username">Username</label>
-                <input ng-model="user.username" type="text" id="username" name="username" class="form-control" placeholder="Enter username" autofocus="true" required>
+                <label for="username">Benutzername</label>
+                <input ng-model="user.username" type="text" id="username" name="username" class="form-control" autofocus="true" required>
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
-                <input ng-model="user.password" type="password" id="password" name="password" class="form-control" placeholder="Enter password" required>
+                <label for="password">Passwort</label>
+                <input ng-model="user.password" type="password" id="password" name="password" class="form-control" required>
             </div>
             <div class="form-group">
                 <label for="email">E-Mail</label>
-                <input ng-model="user.email" type="email" id="email" name="email" class="form-control" placeholder="Enter E-Mail" required>
+                <input ng-model="user.email" type="email" id="email" name="email" class="form-control"required>
+            </div>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input ng-model="user.name" type="text" id="name" name="name" class="form-control"required>
             </div>
             <div class="form-group">
                 <button class="btn btn-success" ng-click="createUser()">Registrieren</button>
