--- a/src/main/resources/static/View/defectchange.html
+++ b/src/main/resources/static/View/defectchange.html
@@ -11,6 +11,12 @@
 </head>
 <body>
     <form>
+        <div class="form-group" ng-repeat="change in defect.changes">
+            <p>Bearbeiter: {{change.editor.username}}</p>
+            <p>Ticket von {{change.previousStatus}} auf {{change.newStatus}} gesetzt.</p>
+            <textarea class="form-control" readonly>{{change.comment}}</textarea>
+            <hr>
+        </div>
         <div class="form-group">
             <label for="changeComment">Kommentarfeld</label>
             <textarea class="form-control" id="changeComment" rows="10" ng-model="defectChange.comment"></textarea>
