Fix bug in Registration component

--- a/src/main/resources/static/View/registration.html
+++ b/src/main/resources/static/View/registration.html
@@ -29,7 +29,7 @@
                 <label for="name">Name</label>
                 <input ng-model="user.name" type="text" id="name" name="name" class="form-control"required>
             </div>
-            <div class="form-group">
+            <div class="btn-group">
                 <button class="btn btn-success" ng-click="createUser()">Registrieren</button>
                 <button class="btn btn-primary" ng-click="switchToLogin()">Zurück zur vorherigen Seite</button>
             </div>
