--- a/src/main/resources/static/View/defectdetails.html
+++ b/src/main/resources/static/View/defectdetails.html
@@ -13,7 +13,7 @@
     <h1>Ticketbearbeitung</h1>
     <hr>
     <div class="row">
-        <div class="col-sm-7">
+        <div class="col-sm-6">
             <form ng-submit="submitChanges()">
                 <div class="form-group">
                     <label for="defectDetailId">Id</label>
@@ -90,11 +90,12 @@
                 </div>
             </form>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-6">
             <h4>Verlauf des Tickets</h4>
             <hr>
             <div class="form-group" ng-repeat="change in previousChanges">
                 <p>Bearbeiter: {{change.editor.username}}</p>
+                <p>Geändert: {{change.changeTime}}</p>
                 <p>Ticket von {{change.previousStatus}} auf {{change.newStatus}} gesetzt.</p>
                 <textarea readonly class="form-control">{{change.comment}}</textarea>
                 <hr>
