Fix bug in defect change controller

--- a/src/main/resources/static/View/defectchange.html
+++ b/src/main/resources/static/View/defectchange.html
@@ -31,13 +31,13 @@
             </button>
             <button type="button"
                     class="btn btn-success"
-                    ng-if="changeStatus === 'closed'"
+                    ng-if="changeStatus === 'close'"
                     ng-click="changeDefect('RESOLVED')">
                 Ticket auf gelöst setzen
             </button>
             <button type="button"
                     class="btn btn-danger"
-                    ng-if="changeStatus === 'closed'"
+                    ng-if="changeStatus === 'close'"
                     ng-click="changeDefect('REJECTED')">
                 Ticket auf Abgelehnt setzen
             </button>
