Add return button to defect change view

--- a/src/main/resources/static/View/defectchange.html
+++ b/src/main/resources/static/View/defectchange.html
@@ -53,6 +53,10 @@
                     ng-click="changeDefect('CLOSED')">
                 Ticket schließen
             </button>
+            <button class="btn btn-primary"
+                    ng-click="switchToDetail()">
+                Zurück zur vorherigen Seite
+            </button>
         </div>
     </form>
 
