--- a/src/main/resources/static/View/defectdetails.html
+++ b/src/main/resources/static/View/defectdetails.html
@@ -7,6 +7,10 @@
         .page-content {
             padding: 80px;
         }
+        .scrollHistory{
+            height: 500px;
+            overflow-y: auto;
+        }
     </style>
 </head>
 <body>
@@ -93,12 +97,14 @@
         <div class="col-sm-6">
             <h4>Verlauf des Tickets</h4>
             <hr>
-            <div class="form-group" ng-repeat="change in previousChanges">
-                <p>Bearbeiter: {{change.editor.username}}</p>
-                <p>Geändert: {{change.changeTime}}</p>
-                <p>Ticket von {{change.previousStatus}} auf {{change.newStatus}} gesetzt.</p>
-                <textarea readonly class="form-control">{{change.comment}}</textarea>
-                <hr>
+            <div class="form-group scrollHistory">
+                <div class="form-group" ng-repeat="change in previousChanges">
+                    <p>Bearbeiter: {{change.editor.username}}</p>
+                    <p>Geändert: {{change.changeTime}}</p>
+                    <p>Ticket von {{change.previousStatus}} auf {{change.newStatus}} gesetzt.</p>
+                    <textarea readonly class="form-control">{{change.comment}}</textarea>
+                    <hr>
+                </div>
             </div>
         </div>
     </div>
