Add logout Button to home view

--- a/src/main/resources/static/View/home.html
+++ b/src/main/resources/static/View/home.html
@@ -31,6 +31,11 @@
             ng-if="excludeClosed">
         Geschlossene Tickets einblenden
     </button>
+    <button type="button"
+            class="btn btn-danger"
+            ng-click="switchToLogin()">
+        Ausloggen
+    </button>
 </div>
 <div>
     <table datatable="ng" class="table row-border hover">
