--- a/src/main/resources/static/View/login.html
+++ b/src/main/resources/static/View/login.html
@@ -11,27 +11,47 @@
     </style>
 </head>
 <body>
-<div class="col-sm-8 col-sm-push-4">
-    <h2>Fehlerverwaltungssystem</h2>
-    <p>Bitte melden Sie sich mit Ihrem Benutzernamen und Ihrem Passwort an.</p>
-    <p>Für weitere Informationen kontaktieren Sie bitte Ihren Systemadministrator.</p>
-    <p class="text-danger">Zugang nur für autorisierte Entwickler.</p>
-</div>
-<div class="col-sm-4 col-sm-pull-8">
-    <form novalidate>
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input ng-model="user.username" type="text" id="username" name="username" class="form-control" placeholder="Enter username" autofocus="true" autocomplete="off" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input ng-model="user.password" type="password" id="password" name="password" class="form-control" placeholder="Enter password" required>
-        </div>
-        <div class="form-group">
-            <button class="btn btn-primary" ng-click="checkUserData()">Anmelden</button>
-            <button class="btn btn-success" ng-click="createUser()">Registrieren</button>
-        </div>
-    </form>
-</div>
+    <div class="col-sm-8 col-sm-push-4">
+        <h2>Fehlerverwaltungssystem</h2>
+        <p>Bitte melden Sie sich mit Ihrem Benutzernamen und Ihrem Passwort an.</p>
+        <p>Für weitere Informationen kontaktieren Sie bitte Ihren Systemadministrator.</p>
+        <p class="text-danger">Zugang nur für autorisierte Entwickler.</p>
+    </div>
+    <div class="col-sm-4 col-sm-pull-8">
+        <form novalidate>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input ng-model="user.username"
+                       type="text"
+                       id="username"
+                       name="username"
+                       class="form-control"
+                       placeholder="Enter username"
+                       autofocus="true"
+                       autocomplete="off"
+                       required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input ng-model="user.password"
+                       type="password"
+                       id="password"
+                       name="password"
+                       class="form-control"
+                       placeholder="Enter password"
+                       required>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary"
+                        ng-click="checkUserData()">
+                    Anmelden
+                </button>
+                <button class="btn btn-success"
+                        ng-click="createUser()">
+                    Registrieren
+                </button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
