--- a/src/main/resources/static/View/defectdetails.html
+++ b/src/main/resources/static/View/defectdetails.html
@@ -73,13 +73,13 @@
                             class="btn btn-warning"
                             ng-if="openDefect"
                             ng-click="editDefect('open')">
-                        Ticket auf Bearbeitung setzen.
+                        Ticket auf Bearbeitung setzen
                     </button>
                     <button type="button"
                             class="btn btn-success"
                             ng-if="closeDefect"
                             ng-click="editDefect('close')">
-                        Ticket Bearbeitung abschließen.
+                        Ticket Bearbeitung abschließen
                     </button>
                     <button type="button"
                             class="btn btn-danger"
